[workspace]
resolver = "2"

members = [
    "second_max",
    "unimodal_max",
    "element_idx_check",
    "inversions_count",
    "sorted_n",
    "quicksort",
    "min_cut",
    "topological_sort",
    "strong_components",
    "shortest_path",
    "median_stream",
    "greedy",
    "union_find",
    "clustering_algo"
]

[profile.test]
resolver = "2"
opt-level = 3
overflow-checks = false
