[workspace]
resolver = "2"

members = [
    "second_max",
    "unimodal_max",
    "element_idx_check",
    "inversions_count",
    "sorted_n",
    "quicksort",
    "min_cut",
    "topological_sort",
    "strong_components",
    "shortest_path",
    "median_stream",
    "greedy",
    "union_find",
    "clustering_algo",
    "huffman",
    "dynamic_path_graph",
    "binary_search_builder",
    "knapsack",
    "jonsons",
    "bellman_ford",
    "graph_representations",
    "dijkstra",
    "updatable_heap"
]

[profile.test]
opt-level = 3
overflow-checks = false
